<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Entel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_internet_conection">No se ha detectado conexión a internet</string>

    //Login view
    <string name="login_btn">[ Ingresar_</string>
    <string name="phone_hint">Teléfono (8 dígitos)</string>
    <string name="rut_hint">Rut usuario</string>
    <string name="key_hint">Clave</string>
    <string name="register_btn">Registrarme en Mi Entel</string>
    <string name="recover_btn">Olvidé mi clave</string>
    <string name="login_txt">Bienvenido a\nMi Entel</string>
    <string name="login_error">Alguno de los datos ingresados es incorrecto</string>
    <string name="logout_error">Se ha producido un error en el logout</string>
    <string name="login_phone_error">Debes introducir un número de teléfono</string>
    <string name="login_error_phone_size">El número de teléfono debe contener 8 dígitos</string>
    <string name="login_error_rut">Debes introducir un número de Rut</string>
    <string name="login_incorrect_error_rut">RUT Inválido</string>
    <string name="login_error_pin">Debes ingresar tu clave</string>
    <string name="loading_text">Cargando</string>
    <string name="loading_title">Entel</string>
    <string name="register_title">Registro</string>
    <string name="recover_title">Recuperar Contraseña</string>
    <string name="unknown_error">Este servicio no se encuentra disponible, inténtalo más tarde</string>

    //Left menu
    <string name="recargas">Recargas</string>
    <string name="tiendas">Tiendas</string>
    <string name="planes_tarifas">Planes y Tarifas</string>
    <string name="ayuda">Ayuda y Soporte</string>
    <string name="login">Login</string>
    <string name="consulta_trafico">Consulta de Tráfico</string>
    <string name="estado_cuenta">Estado de Cuenta</string>
    <string name="bolsas">Mis Bolsas</string>
    <string name="plan">Mi Plan</string>
    <string name="consulta_saldo">Consulta de Saldo</string>
    <string name="beneficios">Descuentos Zona</string>
    <string name="presta_luka">Presta Luka</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="owner_label">Titular:</string>
    <string name="logout_btn">Cerrar Sesión</string>

    //Web View
    <string name="connection_error">Error de conexión</string>
    <string name="reload">Recargar</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>

    //Qualtrics
    <string name="alertbox_text">Ayúdanos a mejorar nuestro servicio. Contesta esta breve encuesta</string>
    <string name="alertbox_ok_button">Sí, quiero participar</string>
    <string name="alertbox_cancel_button">No, gracias</string>
    <string name="survey_header">Encuesta de Satisfacción</string>

    //On boarding
    <string name="onboarding1_title">Bienvenido_</string>
    <string name="onboarding1_subtitle">a la App Entel!</string>
    <string name="onboarding2_title">Si tienes Plan_</string>
    <string name="onboarding3_title">Si tienes Prepago_</string>
    <string name="onboarding4_title">Beneficios_</string>

    <string name="onboarding1_body">Desde ahora te será más fácil tener el\ncontrol de tu servicio de telefonía móvil.</string>
    <string name="onboarding2_body">Revisa el estado de tu cuenta, las\ncaracterísticas de tu plan y mantente al\ntanto de tu tráfico de minutos, mensajes\nde texto y consumo de datos.</string>
    <string name="onboarding3_body">Revisa tu saldo, recarga en línea y\ncompra bolsas cuando quieras.</string>
    <string name="onboarding4_body">¡Conoce todos los beneficios que la\nzOna Entel tiene para ti!</string>

</resources>
